hphp/hack/test/typecheck/test_consts8.php.exp
File "test_consts8.php", line 6, characters 12-20:
Invalid return type (Typing[4110])
File "test_consts8.php", line 5, characters 24-29:
Expected string
File "test_consts8.php", line 4, characters 18-20:
But got int
